fixed issue with name spacing on the about page

--- a/static/css/apps/about.less
+++ b/static/css/apps/about.less
@@ -201,7 +201,7 @@
             float: left;
             text-align: left;
             height: 50px;
-            width: 180px;
+            width: 200px;
         }
         ul.names a {
             color: @color-accent3;
@@ -209,7 +209,7 @@
         }
 
         ul > li {
-            margin-right: 10%;
+            margin-right: 5%;
             margin-left: 0;
         }
 
